--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-osx_image: xcode8
+osx_image: xcode8.2
 language: objective-c
 install: gem install xcpretty
-script: xcodebuild test -project JSON.xcodeproj -scheme JSON-macOS | xcpretty --color; exit ${PIPESTATUS[0]}
+script: make test
